# mastery

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
mastery/: __main__.py  config.py  data.py  display.py  milestones.py  timer.py
mastery/commands/: __init__.py  categories.py  history.py  log.py  start.py  stats.py  status.py  stop.py
